# customer-churn-prediction

./: .gitignore  README.md  data_preprocessing.py  feature_engineering.py  model_inference.py  pyproject.toml  requirements.txt  rules.md
configs/: default_config.yaml  feature_config.yaml  logging_config.yaml  model_config.yaml
data/: customer_data.csv  new_customers.csv
data/processed/: featured_data.csv  preprocessed_data.csv
docs/: data_preprocessing.md  feature_engineering.md  model_evaluation.md  model_training.md  project_structure.md
scripts/: create_sample_data.py  predict.py  preprocess_and_engineer.py  train.py
src/: __init__.py  data_preprocessing.py  feature_engineering.py  model_evaluation.py  model_inference.py  model_training.py
src/beautifulcode/: data_preprocessing.py  feature_engineering.py  model_evaluation.py  model_training.py
src/data/: loader.py  preprocessor.py  validation.py
src/features/: creator.py  selector.py  transformer.py
src/models/: optimizer.py  predictor.py  trainer.py
src/utils/: config.py  logger.py  metrics.py
src/visualization/: __init__.py  eda.py  evaluation.py  feature_plots.py
tests/: conftest.py  test_data_preprocessing.py  test_feature_engineering.py  test_model_training.py
tests/unit/: test_data_loader.py  test_model_evaluation.py  test_preprocessor.py
